--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
  *{
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+  -webkit-tap-highlight-color: transparent;
 }
 .container {
   width: 80%;
