--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body {
  *{
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+}
+
+a {
   -webkit-tap-highlight-color: transparent;
 }
 .container {
